Alteration of @media screen script for smaller screens August 2024

--- a/src/August2024.css
+++ b/src/August2024.css
@@ -423,7 +423,7 @@ margin-bottom:5%;
  .blogPhotoDivAugust{
  display:flex;
  flex-direction: column;
- background-color:  #C291A4;
+ background-color:  #eae374;
  padding-bottom: 15%;
  padding-top: 5%;
  margin-top:2%;
