--- a/src/August2024.css
+++ b/src/August2024.css
@@ -86,6 +86,77 @@
   font-weight: bold;
 }
 
+.newsCongrats{
+  color:black;
+  border:solid 3px #757c88;
+  background-color:black;
+  text-align: center;
+  padding:80px 10px 80px 10px;
+  margin:5px;
+  font-size:1.5rem;
+  font-weight: bold;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.CongratsMessage{
+    border-right: solid 5px rgba(255,255,255,.75);
+    white-space: wrap;
+    overflow: hidden;    
+    font-family: 'Source Code Pro', monospace;  
+    font-size: 48px;
+    color: #FFD437;
+  }
+  
+  /* Animation Congrats Animation */
+  .CongratsMessage {
+    animation: animated-text 12s linear 1s infinite normal both, animated-cursor1 1000ms linear infinite;
+    -webkit-animation: animated-text 12s linear 1s infinite normal both, animated-cursor1 1000ms linear infinite;
+}
+  
+  /* text animation */
+  
+  @keyframes animated-text1{
+    from{width: 10px;}
+    to{width: 1500px;}
+  }
+  
+  /* cursor animations */
+  
+  @keyframes animated-cursor1{
+    from{border-right-color: rgba(255,255,255,.75);}
+    to{border-right-color: transparent;}
+  }
+
+  /* Animation Congrats Animation */
+  .CongratsMessage{
+    border-right: solid 5px rgba(255,255,255,.75);
+    white-space: nowrap;
+    overflow: hidden;    
+    font-family: 'Source Code Pro', monospace;  
+    font-size: 48px;
+    color: #FFD437;
+  }
+
+  .CongratsMessage {
+    animation: animated-text 12s linear 1s infinite normal both, animated-cursor 1000ms linear infinite;
+    -webkit-animation: animated-text 12s linear 1s infinite normal both, animated-cursor 1000ms linear infinite;
+}
+  
+  /* text animation */
+  
+  @keyframes animated-text{
+    from{width: 10px;}
+    to{width: 1500px;}
+  }
+  
+  /* cursor animations */
+  
+  @keyframes animated-cursor{
+    from{border-right-color: rgba(255,255,255,.75);}
+    to{border-right-color: transparent;}
+  }
+
+
 .dateAugust{
   color:#36454F;
   border:solid 3px #757c88;
@@ -118,8 +189,7 @@
   margin-bottom:0vh;
   padding-top: 10vh;
   padding-bottom:5vh;
- 
-}
+ }
 
 .blogPhoto1August img {
   display: block;
@@ -443,8 +513,70 @@ margin-bottom:5%;
    -moz-border-radius:100%;
    -ms-border-radius:100%;
    -o-border-radius:100%;
- }   
+ }  
+ 
+ .CongratsMessage{
+  border-right: solid 5px rgba(255,255,255,.75);
+  white-space: nowrap;
+  overflow:hidden;    
+  font-family: 'Source Code Pro', monospace;  
+  font-size: 14px;
+  color: #FFD437;
+}
 
+/* Animation */
+.CongratsMessage {
+  animation: animated-text 3s linear 1s infinite normal both, animated-cursor 1000ms linear infinite;
+  -webkit-animation: animated-text 3s linear 1s infinite normal both, animated-cursor 1000ms linear infinite;
+}
+
+/* text animation */
+
+@keyframes animated-text{
+  from{width: 5vw;}
+  to{width: 95vw;}
+}
+
+/* cursor animations */
+
+@keyframes animated-cursor{
+  from{border-right-color: rgba(255,255,255,.75);}
+  to{border-right-color: transparent;}
+}
+
+ }
+
+ /*To resize the congrats animation for devices between 1000 and 481px (includes ipads)*/
+
+ @media screen and (max-width: 1000px) and (min-width:481px){
+  .CongratsMessage{
+    border-right: solid 5px rgba(255,255,255,.75);
+    white-space: nowrap;
+    overflow:hidden;    
+    font-family: 'Source Code Pro', monospace;  
+    font-size: 22px;
+    color: #FFD437;
+  }
+  
+  /* Animation */
+  .CongratsMessage {
+    animation: animated-text 3s linear 1s infinite normal both, animated-cursor 1000ms linear infinite;
+    -webkit-animation: animated-text 3s linear 1s infinite normal both, animated-cursor 1000ms linear infinite;
+}
+  
+  /* text animation */
+  
+  @keyframes animated-text{
+    from{width: 5vw;}
+    to{width: 95vw;}
+  }
+  
+  /* cursor animations */
+  
+  @keyframes animated-cursor{
+    from{border-right-color: rgba(255,255,255,.75);}
+    to{border-right-color: transparent;}
+  }
  }
 
  
