--- a/src/September2024.css
+++ b/src/September2024.css
@@ -116,59 +116,46 @@
       border:solid #757c88 3px;
   }
   
-  .slideshowentryJune {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+  .slideshowentrySeptember {
+    display: column;
+    justify-content: center;
+    margin-left: 35%;
+    margin-right: 35%;
     pointer-events:none;
-    width:25%;
+    width:30%;
     height:auto;
-    border:solid #b5a642 10px;
-    border-radius:100%;
-    margin-top:3%;
-    margin-bottom:5%;
-    -webkit-border-radius:100%;
-    -moz-border-radius:100%;
-    -ms-border-radius:100%;
-    -o-border-radius:100%;
-  }      
-  
-  .slideshowentry1June {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  pointer-events:none; 
-  width:15%;
-  height:auto;
-  border:solid #b5a642 10px;
-  border-radius:50%;
-  margin-top:3%;
-  margin-bottom:5%;
-  -webkit-border-radius:40px;
-  -moz-border-radius:40px;
-  -ms-border-radius:40px;
-  -o-border-radius:40px;
-  }      
-  
-  .slideshowinstructionsJune {
+    border:solid #757c88 3px;
+    border-radius:80%;
     margin-top:5%;
-    margin-bottom:2%;
-    font-size:1.2rem;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    display:inline-block;
-    color:white; 
+    margin-bottom:5%;
+    -webkit-border-radius:80%;
+    -moz-border-radius:80%;
+    -ms-border-radius:80%;
+    -o-border-radius:80%;
   }
   
-  .SlideshowHostPhotoJune{
+  .SlideshowHostPhotoSeptember{
     display:flex;
     flex-direction: column;
-    background-color: #48AAAD;
+    background-color: #eec170;
     padding-bottom: 5%;
     padding-top: 5%;
     margin-top:0vh;
     justify-content:center;
     text-align:center;
   }
+
+  .titlesSeptember{
+    color:black;
+    font-size:1.3rem;
+  }
+  
+  .headTitlesSeptember{
+    color:black;
+    font-size:1.3rem; 
+    text-decoration: underline;
+  }
+  
     
         /*To ensure on ipad screens and larger mobiles that photos are displayed in columnar format to ensure sizing and clarity of image optimal*/
     @media screen and (min-width:402px) and (max-width:900px){
