--- a/src/June2024.css
+++ b/src/June2024.css
@@ -10,12 +10,12 @@
   } 
 
 .headerPhotoJune{
-    width:50%;
+    width:40%;
     height:auto;
-    border:#b5a642 solid 10px;
+    /* border: solid 10px; */
     border-radius:50%;
     margin:auto;
-    -webkit-border-radius:50%;
+    -webkit-border-radius:20%;
     -moz-border-radius:50%;
     -ms-border-radius:50%;
     -o-border-radius:50%;
@@ -26,7 +26,7 @@
     } 
   
   .datenewsDivJune{
-    background-color: #0492c2;
+    background-color: #B0C4DE;
     display:flex;
     flex-direction:column;
     margin-top: 0vh;
@@ -38,7 +38,7 @@
   .dateJune{
     color:white;
     border:solid 2px #757c88;
-    background-color:#48AAAD;
+    background-color:#5D8AA8;
     text-align: center;
     padding:10px 10px 10px 10px;
     margin:5px;
@@ -50,7 +50,7 @@
   .newsheaderJune{
     color:white;
     border:solid 2px #757c88;
-    background-color:#48AAAD;
+    background-color:#5D8AA8;
     text-align: center;
     padding:10px 10px 10px 10px;
     margin:5px;
@@ -62,7 +62,7 @@
   .newsJune{
     color:white;
     border:solid 2px #757c88;
-    background-color:#48AAAD;
+    background-color:#5D8AA8;
     text-align: left;
     padding:20px 20px 20px 20px;
     margin-top:1%;
@@ -76,7 +76,7 @@
     display:flex;
     flex-direction: row;
     border:solid 2px #757c88;
-    background-color: #48AAAD;
+    background-color: #5D8AA8;
     padding-bottom: 8%;
     padding-top: 5%;
     margin-top:0vh;
@@ -88,12 +88,12 @@
     margin-right: auto;
     width:70%;
     height:70%;
-    border:solid #b5a642 10px;
-    border-radius:50%;
-    -webkit-border-radius:50%;
-    -moz-border-radius:50%;
-    -ms-border-radius:50%;
-    -o-border-radius:50%;
+    /* border:solid 2px; */
+    border-radius:20%;
+    -webkit-border-radius:20%;
+    -moz-border-radius:20%;
+    -ms-border-radius:20%;
+    -o-border-radius:20%;
 }
 
 figjune{
@@ -124,7 +124,7 @@ figjune img {
   pointer-events:none;
   width:25%;
   height:auto;
-  border:solid #b5a642 10px;
+  /* border:solid 2px; */
   border-radius:100%;
   margin-top:3%;
   margin-bottom:5%;
@@ -134,21 +134,7 @@ figjune img {
   -o-border-radius:100%;
 }      
 
-.slideshowentry1June {
-display: block;
-margin-left: auto;
-margin-right: auto;
-pointer-events:none; 
-width:15%;
-height:auto;
-border:solid #b5a642 10px;
-border-radius:50%;
-margin-top:3%;
-margin-bottom:5%;
--webkit-border-radius:40px;
--moz-border-radius:40px;
--ms-border-radius:40px;
--o-border-radius:40px;
+.slideshowentry1June { display: block; margin-left: auto; margin-right: auto; pointer-events:none; width:15%; height:auto; border:solid 2px; border-radius:50%; margin-top:3%; margin-bottom:5%; -webkit-border-radius:50%; -moz-border-radius:50%; -ms-border-radius:50%; -o-border-radius:50%;
 }      
 
 .slideshowinstructionsJune {
@@ -163,20 +149,92 @@ margin-bottom:5%;
 .SlideshowHostPhotoJune{
   display:flex;
   flex-direction: column;
-  background-color: #48AAAD;
+  background-color: #5D8AA8;
   padding-bottom: 5%;
   padding-top: 5%;
   margin-top:0vh;
   justify-content:center;
   text-align:center;
 }
+
+.newsCongratsJune{
+  color:black;
+  /* border:solid 3px #757c88; */
+  background-color:#5D8AA8;
+  text-align: center;
+  padding:10% 1% 1% 1%;
+  margin:10px;
+  font-size:1.5rem;
+  font-weight: bold;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.CongratsMessageJune{
+    /* border-right: solid 5px rgba(255,255,255,.75); */
+    white-space: wrap;
+    overflow: hidden;    
+    font-family: 'Source Code Pro', monospace;  
+    font-size: 48px;
+    color: #757c88;
+    padding-top:10%;
+  }
+  
+  /* Animation Congrats Animation */
+  .CongratsMessageJune {
+    animation: animated-text 12s linear 1s infinite normal both, animated-cursor1 1000ms linear infinite;
+    -webkit-animation: animated-text 12s linear 1s infinite normal both, animated-cursor1 1000ms linear infinite;
+}
+  
+  /* text animation */
+  
+  @keyframes animated-text1{
+    from{width: 10px;}
+    to{width: 1500px;}
+  }
+  
+  /* cursor animations */
+  
+  @keyframes animated-cursor1{
+    from{border-right-color: rgba(255,255,255,.75);}
+    to{border-right-color: transparent;}
+  }
+
+  /* Animation Congrats Animation */
+  .CongratsMessageJune{
+    /* border-right: solid 5px rgba(255,255,255,.75); */
+    white-space: nowrap;
+    overflow: hidden;    
+    font-family: 'Source Code Pro', monospace;  
+    font-size: 48px;
+    color: whitesmoke;
+  }
+
+  .CongratsMessageJune {
+    animation: animated-text 12s linear 1s infinite normal both, animated-cursor 1000ms linear infinite;
+    -webkit-animation: animated-text 12s linear 1s infinite normal both, animated-cursor 1000ms linear infinite;
+}
+  
+  /* text animation */
+  
+  @keyframes animated-text{
+    from{width: 10px;}
+    to{width: 1500px;}
+  }
+  
+  /* cursor animations */
+  
+  @keyframes animated-cursor{
+    from{border-right-color: rgba(255,255,255,.75);}
+    to{border-right-color: transparent;}
+  }
+
   
       /*To ensure on ipad screens and larger mobiles that photos are displayed in columnar format to ensure sizing and clarity of image optimal*/
   @media screen and (min-width:402px) and (max-width:900px){
   .blogPhotoDivJune{
     display:flex;
     flex-direction: column;
-    background-color: #48AAAD;
+    background-color: #5D8AA8;
     padding-bottom: 15%;
     padding-top: 5%;
     margin-top:2%;
@@ -205,10 +263,79 @@ margin-bottom:5%;
   .blogPhotoDivJune{
   display:flex;
   flex-direction: column;
-  background-color: ;
+  background-color: #5D8AA8;
   padding-bottom: 15%;
   padding-top: 5%;
   margin-top:2%;
   }
   
   }
+
+  @media screen and (max-width:480px) {
+
+  /*To ensure on mobile screens below 480px that photos are displayed in columnar format to ensure sizing and clarity of image optimal*/ 
+  .CongratsMessageJune{
+   border-right: solid 5px rgba(255,255,255,.75);
+   white-space: nowrap;
+   overflow:hidden;    
+   font-family: 'Source Code Pro', monospace;  
+   font-size: 14px;
+   color: #757c88;
+ }
+ 
+ /* Animation */
+ .CongratsMessageJune {
+   animation: animated-text 6s linear 1s infinite normal both, animated-cursor 1000ms linear infinite;
+   -webkit-animation: animated-text 6s linear 1s infinite normal both, animated-cursor 1000ms linear infinite;
+}
+ 
+ /* text animation */
+ 
+ @keyframes animated-text{
+   from{width: 5vw;}
+   to{width: 95vw;}
+ }
+ 
+ /* cursor animations */
+ 
+ @keyframes animated-cursor{
+   from{border-right-color: rgba(255,255,255,.75);}
+   to{border-right-color: transparent;}
+ }
+ 
+  }
+ 
+  /*To resize the congrats animation for devices between 1000 and 481px (includes ipads)*/
+ 
+  @media screen and (max-width: 1000px) and (min-width:481px){
+   .CongratsMessageJune{
+     border-right: solid 5px rgba(255,255,255,.75);
+     white-space: nowrap;
+     overflow:hidden;    
+     font-family: 'Source Code Pro', monospace;  
+     font-size: 22px;
+     color:  #757c88;;
+   }
+   
+   /* Animation */
+   .CongratsMessageJune {
+     animation: animated-text 6s linear 1s infinite normal both, animated-cursor 1000ms linear infinite;
+     -webkit-animation: animated-text 6s linear 1s infinite normal both, animated-cursor 1000ms linear infinite;
+}
+   
+   /* text animation */
+   
+   @keyframes animated-text{
+     from{width: 5vw;}
+     to{width: 95vw;}
+   }
+   
+   /* cursor animations */
+   
+   @keyframes animated-cursor{
+     from{border-right-color: rgba(255,255,255,.75);}
+     to{border-right-color: transparent;}
+   }
+  }
+ 
+  
