--- a/src/September2024.css
+++ b/src/September2024.css
@@ -76,7 +76,7 @@
       background-color:#D23736;
       text-align: center;
       padding:10px 10px 10px 10px;
-      margin: 2% 35% 2% 35%;
+      margin: 2% 20% 2% 20%;
       font-size:1.2rem;
       font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
       font-weight:bold;
@@ -155,8 +155,40 @@
     font-size:1.3rem; 
     text-decoration: underline;
   }
-  
-    
+
+  #sheepAdultLamb1{
+    overflow-x: visible;
+    overflow-y: visible;
+  }
+
+  #sheepAdultLamb2{
+    overflow-x: visible;
+    overflow-y: visible;
+  }
+
+   /*@media queries for the sheep and cows*/
+   @media screen and (min-width:480px) and (max-width:900px){
+    /*To ensure on ipad screens and larger mobiles (min-width 480px, max-width 900px) that the sheep and lambs are correctly positioned*/
+ #swaledaleSheep1{ 
+  transform: translate(-200px,0px); 
+  -webkit-transform: translate(-200px,0px); 
+  -moz-transform: translate(-200px,0px); 
+  -ms-transform: translate(-200px,0px); 
+  -o-transform: translate(-200px,0px); 
+  overflow: visible;
+ }
+   
+   #swaledaleSheep2{
+     transform: translate(-600px,0px);
+     -webkit-transform: translate(-600px,0px);
+     -moz-transform: translate(-600px,0px);
+     -ms-transform: translate(-600px,0px);
+     -o-transform: translate(-600px,0px);
+     overflow: visible;
+}
+    }
+
+     
         /*To ensure on ipad screens and larger mobiles that photos are displayed in columnar format to ensure sizing and clarity of image optimal*/
     @media screen and (min-width:402px) and (max-width:900px){
     .blogPhotoDivSeptember{
@@ -166,6 +198,24 @@
       padding-bottom: 15%;
       padding-top: 5%;
       margin-top:2%;
+    }
+
+    .slideshowentrySeptember {
+      display: column;
+      justify-content: center;
+      margin-left: 25%;
+      margin-right: 25%;
+      pointer-events:none;
+      width:50%;
+      height:auto;
+      border:solid #757c88 3px;
+      border-radius:80%;
+      margin-top:5%;
+      margin-bottom:5%;
+      -webkit-border-radius:80%;
+      -moz-border-radius:80%;
+      -ms-border-radius:80%;
+      -o-border-radius:80%;
     }
     }
 
@@ -186,7 +236,66 @@
       .newsheaderSeptember{
         margin-top:20%;
       }
-     }
+
+      .slideshowentrySeptember {
+        display: column;
+        justify-content: center;
+        margin-left: 15%;
+        margin-right: 15%;
+        pointer-events:none;
+        width:70%;
+        height:auto;
+        border:solid #757c88 3px;
+        border-radius:80%;
+        margin-top:5%;
+        margin-bottom:5%;
+        -webkit-border-radius:80%;
+        -moz-border-radius:80%;
+        -ms-border-radius:80%;
+        -o-border-radius:80%;
+      }
+
+      /*To ensure on mobile screens below 480px width (this includes one plus phones) that relevant components of the site are displayed with the best dimensions for the smaller devices*/
+          
+     #swaledaleSheep1{
+      transform:scale(80%) translate(-400px,0px);
+      -webkit-transform:scale(80%) translate(-400px,0px);
+      -moz-transform:scale(80%) translate(-400px,0px);
+      -ms-transform:scale(80%) translate(-400px,0px);
+      -o-transform:scale(80%) translate(-400px,0px);
+      overflow: visible;
+}
+     
+     #swaledaleSheep2{
+       transform: scale(80%) translate(-600px,0px);
+       -webkit-transform: scale(80%) translate(-600px,0px);
+       -moz-transform: scale(80%) translate(-600px,0px);
+       -ms-transform: scale(80%) translate(-600px,0px);
+       -o-transform: scale(80%) translate(-600px,0px);
+       overflow: visible;
+}
+
+    /* #sheepAdultLamb1{
+  transform: scale (60%) translate(-200px,0px);
+  -webkit-transform: scale (60%) translate(-200px,0px);
+  -moz-transform: scale (60%) translate(-200px,0px);
+  -ms-transform: scale (60%) translate(-200px,0px);
+  -o-transform: scale (60%) translate(-200px,0px);
+  overflow: visible;
+}
+
+
+    #sheepAdultLamb2{
+  transform: scale(60%) translate(-200px,0px);
+  -webkit-transform: scale(60%) translate(-200px,0px);
+  -moz-transform: scale(60%) translate(-200px,0px);
+  -ms-transform: scale(60%) translate(-200px,0px);
+  -o-transform: scale(60%) translate(-200px,0px);
+  overflow: visible;
+} */
+
+    }
+     
     
     @media screen and (max-width:401px) {
     /*To ensure on mobile screens below 401px width (this includes one plus phones) that relevant components of 
@@ -218,3 +327,7 @@
     }
     
     }
+
+   
+
+    
