--- a/src/September2024.css
+++ b/src/September2024.css
@@ -99,7 +99,7 @@
       display:flex;
       flex-direction: row;
       border:solid 2px #757c88;
-      background-color: #eec170;
+      background-color: #f2e3d6;
       padding-bottom: 5%;
       padding-top: 3%;
       padding-left: 2%;
@@ -112,38 +112,65 @@
       margin-left: auto;
       margin-right: auto;
       width:70%;
-      height:70%;
+      height:auto;
       border:solid #757c88 3px;
   }
   
   .slideshowentrySeptember {
     display: column;
     justify-content: center;
-    margin-left: 35%;
-    margin-right: 35%;
+    margin-left: 40%;
+    margin-right: 40%;
     pointer-events:none;
-    width:30%;
+    width:20%;
     height:auto;
     border:solid #757c88 3px;
-    border-radius:80%;
+    border-radius:30%;
     margin-top:5%;
     margin-bottom:5%;
-    -webkit-border-radius:80%;
-    -moz-border-radius:80%;
-    -ms-border-radius:80%;
-    -o-border-radius:80%;
-  }
+    -webkit-border-radius:30%;
+    -moz-border-radius:30%;
+    -ms-border-radius:30%;
+    -o-border-radius:30%;
+}
   
   .SlideshowHostPhotoSeptember{
     display:flex;
     flex-direction: column;
-    background-color: #eec170;
+    background-color: #f2e3d6;
     padding-bottom: 5%;
     padding-top: 5%;
     margin-top:0vh;
     justify-content:center;
     text-align:center;
   }
+
+  
+.SeptemberDailyNarrative{
+  background-color: #f2e3d6	;
+  text-Align:left;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  padding-right: 10%;
+  padding-left:10%;
+  color:black;
+  font-size:1.2rem;
+  font-family:'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', 'sans-serif';
+}
+
+.componentWalkDetailsSeptember{
+  background-color: #f2e3d6	;
+  /* border:solid 4px grey; */
+  text-Align:center;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  padding-right:2%;
+  color:black;
+  display:flex;
+  flex-direction:column;
+  font-size:1.2rem;
+  font-family:'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', 'sans-serif';
+}
 
   .titlesSeptember{
     color:black;
@@ -194,7 +221,7 @@
     .blogPhotoDivSeptember{
       display:flex;
       flex-direction: column;
-      background-color: #eec170;
+      background-color: #f2e3d6;
       padding-bottom: 15%;
       padding-top: 5%;
       margin-top:2%;
@@ -320,7 +347,7 @@
     .blogPhotoDivSeptember{
     display:flex;
     flex-direction: column;
-    background-color:#eec170 ;
+    background-color:#f2e3d6 ;
     padding-bottom: 15%;
     padding-top: 5%;
     margin-top:2%;
