--- a/src/September2024.css
+++ b/src/September2024.css
@@ -542,15 +542,31 @@
     display:flex;
     flex-direction: column;
     background-color:#f2e3d6 ;
-    padding-bottom: 15%;
+    padding-bottom: 5%;
     padding-top: 5%;
     margin-top:2%;
     }
 
     .CowsAndSheep{
-      margin-bottom: 40%;
-    }
-    
+       transform:scale(0.4)    ;
+       -webkit-transform:scale(0.4)    ;
+       -moz-transform:scale(0.4)    ;
+       -ms-transform:scale(0.4)    ;
+       -o-transform:scale(0.4)    ;
+}
+
+.dateSeptember{
+  font-size:1.0rem;
+}
+
+.newsheaderSeptember, .headTitlesSeptember, .titlesSeptember, .newsSeptember, .SeptemberDailyNarrative{
+  font-size:1.0rem;
+}
+
+li{
+  font-size:1.0rem;
+}
+
     }
 
    
