Addition 1st October 2024 blog, London and Silk Roads

--- a/src/components/buttons.css
+++ b/src/components/buttons.css
@@ -18,6 +18,32 @@
   -o-border-radius:15%;
 } 
 
+@media screen and (max-width:900px) {
+  body #button{
+    display:block;
+    position:relative;
+    height:auto;
+    width:60%;
+    background-color:gray;
+    border:black 2px solid;
+    text-align:center;
+    font-size: large;
+    font-weight: bold;
+    padding:2%;
+    color:white;
+    margin-top: 25%;
+    margin-left:25%;
+    margin-right:25%;
+    border-radius:15%;
+    -webkit-border-radius:15%;
+    -moz-border-radius:15%;
+    -ms-border-radius:15%;
+    -o-border-radius:15%;
+  }  
+}
+
+
+
 @media screen and (max-width:601px) {
   body #button{
     display:block;
