--- a/src/June2024.css
+++ b/src/June2024.css
@@ -134,7 +134,17 @@ figjune img {
   -o-border-radius:100%;
 }      
 
-.slideshowentry1June { display: block; margin-left: auto; margin-right: auto; pointer-events:none; width:15%; height:auto; border:solid 2px; border-radius:50%; margin-top:3%; margin-bottom:5%; -webkit-border-radius:50%; -moz-border-radius:50%; -ms-border-radius:50%; -o-border-radius:50%;
+.slideshowentry1June { 
+  display: block; 
+  margin-left: auto; 
+  margin-right: auto; 
+  pointer-events:none; 
+  width:15%; 
+  height:auto; 
+  border:solid 2px; 
+  border-radius:50%; 
+  margin-top:3%; 
+  margin-bottom:5%; -webkit-border-radius:50%; -moz-border-radius:50%; -ms-border-radius:50%; -o-border-radius:50%;
 }      
 
 .slideshowinstructionsJune {
