--- a/src/October2024.css
+++ b/src/October2024.css
@@ -112,11 +112,30 @@
         color:white; 
       }
 
+      
+.slideshowentryOctober {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  pointer-events:none;
+  width:25%;
+  height:auto;
+  /* border:solid 2px; */
+  border-radius:100%;
+  margin-top:3%;
+  margin-bottom:5%;
+  -webkit-border-radius:100%;
+  -moz-border-radius:100%;
+  -ms-border-radius:100%;
+  -o-border-radius:100%;
+}      
+
 
       @media screen (max-width 401px){
         .newsheaderOctober{
           margin-top:20%;
         }
+
       }
         
       
