--- a/src/June2024.css
+++ b/src/June2024.css
@@ -240,7 +240,7 @@ figjune img {
 
   
       /*To ensure on ipad screens and larger mobiles that photos are displayed in columnar format to ensure sizing and clarity of image optimal*/
-  @media screen and (min-width:402px) and (max-width:900px){
+  @media screen and (min-width:481px) and (max-width:900px){
   .blogPhotoDivJune{
     display:flex;
     flex-direction: column;
@@ -249,12 +249,75 @@ figjune img {
     padding-top: 5%;
     margin-top:2%;
   }
+
+  .headerPhotoJune{
+    width:60%;
+    height:auto;
+    /* border: solid 10px; */
+    border-radius:50%;
+    margin:auto;
+    -webkit-border-radius:20%;
+    -moz-border-radius:50%;
+    -ms-border-radius:50%;
+    -o-border-radius:50%;
+}
+
+.newsCongratsJune{
+  color:black;
+  /* border:solid 3px #757c88; */
+  background-color:#5D8AA8;
+  text-align: center;
+  padding:20% 1% 1% 1%;
+  margin:10px;
+  font-size:1.5rem;
+  font-weight: bold;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+  .slideshowentryJune {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    pointer-events:none;
+    width:70%;
+    height:auto;
+    /* border:solid 2px; */
+    border-radius:100%;
+    margin-top:3%;
+    margin-bottom:5%;
+    -webkit-border-radius:100%;
+    -moz-border-radius:100%;
+    -ms-border-radius:100%;
+    -o-border-radius:100%;
+  }      
   
+  .slideshowentry1June { 
+    display: block; 
+    margin-left: auto; 
+    margin-right: auto; 
+    pointer-events:none; 
+    width:70%; 
+    height:auto; 
+    border:solid 2px; 
+    border-radius:50%; 
+    margin-top:3%; 
+    margin-bottom:5%; -webkit-border-radius:50%; -moz-border-radius:50%; -ms-border-radius:50%; -o-border-radius:50%;
+  }      
+  
+  .slideshowinstructionsJune {
+    margin-top:5%;
+    margin-bottom:2%;
+    font-size:1.0rem;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    display:inline-block;
+    color:white; 
+    padding:3%;
+  }
   }
   
-  @media screen and (max-width:401px) {
+  @media screen and (max-width:480px) {
   
-   /*To ensure on mobile screens below 401px width (this includes one plus phones) that relevant components of 
+   /*To ensure on mobile screens below 480px width (this includes one plus phones) that relevant components of 
    the site are displayed with the best dimensions for the smaller devices*/
   
   
@@ -269,7 +332,7 @@ figjune img {
   position:absolute; 
   } 
   
-  /*To ensure on mobile screens below 401px that photos are displayed in columnar format to ensure sizing and clarity of image optimal*/
+  /*To ensure on mobile screens below 480px that photos are displayed in columnar format to ensure sizing and clarity of image optimal*/
   .blogPhotoDivJune{
   display:flex;
   flex-direction: column;
@@ -278,6 +341,70 @@ figjune img {
   padding-top: 5%;
   margin-top:2%;
   }
+
+  .headerPhotoJune{
+    width:80%;
+    height:auto;
+    /* border: solid 10px; */
+    border-radius:50%;
+    margin:auto;
+    -webkit-border-radius:20%;
+    -moz-border-radius:50%;
+    -ms-border-radius:50%;
+    -o-border-radius:50%;
+}
+
+  .slideshowentryJune {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    pointer-events:none;
+    width:80%;
+    height:auto;
+    border-radius:100%;
+    margin-top:3%;
+    margin-bottom:5%;
+    -webkit-border-radius:100%;
+    -moz-border-radius:100%;
+    -ms-border-radius:100%;
+    -o-border-radius:100%;
+  }      
+  
+  .slideshowentry1June { 
+    display: block; 
+    margin-left: auto; 
+    margin-right: auto; 
+    pointer-events:none; 
+    width:80%; 
+    height:auto; 
+    border:solid 2px; 
+    border-radius:50%; 
+    margin-top:3%; 
+    margin-bottom:5%; -webkit-border-radius:50%; -moz-border-radius:50%; -ms-border-radius:50%; -o-border-radius:50%;
+  }    
+
+  .slideshowinstructionsJune {
+    margin-top:5%;
+    margin-bottom:2%;
+    padding:3%;
+    font-size:1.0rem;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    display:inline-block;
+    color:white; 
+  }
+  
+  .newsCongratsJune{
+    color:black;
+    /* border:solid 3px #757c88; */
+    background-color:#5D8AA8;
+    text-align: center;
+    padding:20% 1% 1% 1%;
+    margin:10px;
+    font-size:1.5rem;
+    font-weight: bold;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  }
+  
   
   }
 
