--- a/src/May2024.css
+++ b/src/May2024.css
@@ -41,7 +41,9 @@
   color:white
   } 
 
-.datenewsDiv{
+.datenewsDivMay2024{
+  display:flex;
+  flex-direction:column;
   border:solid #757c88 4px;
   background-color:#8bb285;
   display:flex;
@@ -145,7 +147,7 @@
       padding-top:5%;
     }
 
-  .slideshowentry {
+  .slideshowentryMay {
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -162,7 +164,7 @@
   -o-border-radius:40px;
 }      
 
-.slideshowentry1 {
+.slideshowentry1May {
 display: block;
 margin-left: auto;
 margin-right: auto;
@@ -182,7 +184,9 @@ margin-bottom:5%;
 .slideshowinstructions {
   margin-top:5%;
   margin-bottom:2%;
-  font-size:1.2rem;
+  margin-right:2%;
+  margin-left:2%;
+  font-size:1.0rem;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   display:inline-block;
   color:#36454F; 
@@ -200,7 +204,18 @@ margin-bottom:5%;
 }
 
     /*To ensure on ipad screens and larger mobiles that photos are displayed in columnar format to ensure sizing and clarity of image optimal*/
-@media screen and (min-width:402px) and (max-width:900px){
+@media screen and (min-width:481px) and (max-width:900px){
+  .datenewsDivMay2024{
+    display:flex;
+    flex-direction:column;
+    border:solid #757c88 4px;
+    background-color:#8bb285;
+    display:flex;
+    flex-direction:column;
+    margin-top: 10vh;
+    margin-bottom:5vh;
+  }
+
 .blogPhotoDiv{
   display:flex;
   flex-direction: column;
@@ -208,13 +223,67 @@ margin-bottom:5%;
   padding-bottom: 15%;
   padding-top: 5%;
   margin-top:2%;
+  
 }
 
+#JillLindisfarne1993img{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  /* pointer-events:none;  */
+  width:70%;
+  height:auto;
+  border:solid grey 2px;
+  border-radius:50%;
+  margin-top:3%;
+  margin-bottom:5%;
+  -webkit-border-radius:40px;
+  -moz-border-radius:40px;
+  -ms-border-radius:40px;
+  -o-border-radius:40px;
 }
 
-@media screen and (max-width:401px) {
+.slideshowentryMay {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  pointer-events:none; 
+  width:70%;
+  height:auto;
+  border:solid grey 2px;
+  border-radius:50%;
+  margin-top:3%;
+  margin-bottom:5%;
+  -webkit-border-radius:40px;
+  -moz-border-radius:40px;
+  -ms-border-radius:40px;
+  -o-border-radius:40px;
+}      
 
- /*To ensure on mobile screens below 401px width (this includes one plus phones) that relevant components of 
+
+.slideshowentry1May {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  pointer-events:none; 
+  width:70%;
+  height:auto;
+  border:solid grey 2px;
+  border-radius:50%;
+  margin-top:3%;
+  margin-bottom:5%;
+  -webkit-border-radius:40px;
+  -moz-border-radius:40px;
+  -ms-border-radius:40px;
+  -o-border-radius:40px;
+  }   
+
+
+}
+
+@media screen and (max-width:480px) {
+
+ /*To ensure on mobile screens below 480px width (this includes one plus phones) that relevant components of 
  the site are displayed with the best dimensions for the smaller devices*/
 
 
@@ -242,5 +311,58 @@ padding-bottom: 15%;
 padding-top: 5%;
 margin-top:2%;
 }
+
+
+#JillLindisfarne1993img{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  /* pointer-events:none;  */
+  width:100%;
+  height:auto;
+  border:solid grey 2px;
+  border-radius:50%;
+  margin-top:3%;
+  margin-bottom:5%;
+  -webkit-border-radius:40px;
+  -moz-border-radius:40px;
+  -ms-border-radius:40px;
+  -o-border-radius:40px;
+}
+
+.slideshowentryMay {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  pointer-events:none; 
+  width:80%;
+  height:auto;
+  border:solid grey 2px;
+  border-radius:50%;
+  margin-top:3%;
+  margin-bottom:5%;
+  -webkit-border-radius:40px;
+  -moz-border-radius:40px;
+  -ms-border-radius:40px;
+  -o-border-radius:40px;
+}      
+
+
+.slideshowentry1May {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  pointer-events:none; 
+  width:80%;
+  height:auto;
+  border:solid grey 2px;
+  border-radius:50%;
+  margin-top:3%;
+  margin-bottom:5%;
+  -webkit-border-radius:40px;
+  -moz-border-radius:40px;
+  -ms-border-radius:40px;
+  -o-border-radius:40px;
+  }   
 
 }
