Modifications November 2024, bonfire animations and September hyperlink settings

--- a/src/November2024.css
+++ b/src/November2024.css
@@ -347,6 +347,14 @@
     -o-transform: scale(0.8)  ;
 }
 
+.titleNovember{
+  color: #ffd200;
+  font-weight: bold;
+  font-size: 56px;
+  margin-top: 25%;
+  
+}
+
 /* .pyro{
   transform: scale(0.9)  ;
   -webkit-transform: scale(0.9)  ;
