--- a/src/October2024.css
+++ b/src/October2024.css
@@ -12,6 +12,7 @@
   .LinkOctober2024 {
       color:#f7ca46;
       font-size: 1.2rem;
+      text-decoration: underline;
     }
   
   #backbuttonOctober{
