--- a/src/components/snowstorm.scss
+++ b/src/components/snowstorm.scss
@@ -29,7 +29,7 @@
 
   @for $i from 1 through 50 {
     .snowflakeV2:nth-child(#{$i}) {
-      --size: #{random(5) * 0.2}vw;   //random(5) returns a random number between 1 and 5.
+      --size: #{random(5) * 0.13}vw;   //random(5) returns a random number between 1 and 5.
       --left-ini: #{random(20) - 10}vw;
       --left-end: #{random(20) - 10}vw;
       left: #{random(100)}vw;
@@ -37,6 +37,21 @@
       animation-delay: -#{random(10)}s;
     }
   }
+
+  @media screen and (min-width:2000px){
+    @for $i from 1 through 50 {
+      .snowflakeV2:nth-child(#{$i}) {
+        --size: #{random(5) * 0.08}vw;   //random(5) returns a random number between 1 and 5.
+        --left-ini: #{random(20) - 10}vw;
+        --left-end: #{random(20) - 10}vw;
+        left: #{random(100)}vw;
+        animation: snowfallV2 #{7 + random(10)}s linear infinite;
+        animation-delay: -#{random(10)}s;
+      }
+    }
+  }
+
+
 
   
   @media screen and (max-width:480px){
