--- a/styles/January2025.css
+++ b/styles/January2025.css
@@ -11,6 +11,10 @@
   font-weight: bold;
 }
 
+.backgroundJanuary2025 {
+  background-color: black;
+}
+
 .newsJanuary {
   color: white;
   border: solid 2px whitesmoke;
@@ -18,7 +22,7 @@
   text-align: left;
   padding: 50px 20px 5px 20px;
   margin-top: 0%;
-  margin-bottom: 0%;
+  margin-bottom: 10%;
   font-size: 1.1rem;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-weight: bold;
@@ -61,5 +65,6 @@
 
 .mainJanuary {
   background-color: black;
-  height: 100vh;
+  height: 100%;
+  padding-bottom: 3%;
 }/*# sourceMappingURL=January2025.css.map */
