Addition 15th January 2025 blog

--- a/styles/January2025.css
+++ b/styles/January2025.css
@@ -15,6 +15,12 @@
   background-color: black;
 }
 
+.LinkJanuary2025 {
+  color: #f7ca46;
+  font-size: 1.2rem;
+  text-decoration: underline;
+}
+
 .newsJanuary {
   color: white;
   border: solid 2px whitesmoke;
